<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwoSC</string>
    <string name="action_settings">Settings</string>

    <!--Introduce-->
    <string name="hint_account">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remove_warning">Remove Warning</string>
    <string name="hello_world">Hello world!</string>
    <string name="church_introduce">Sharing and Serving Church</string>
    <string name="cancel">Cancel</string>
    <string name="user_empty">The user name cannot be empty.</string>
    <string name="password_empty">The password cannot be empty.</string>
    <string name="login_fail">Incorrect username or password provided. Please try again.</string>
    <string name="no_connection">No data connection. Unable to login in.</string>
    <string name="sending">Sending...</string>

    <string name="title_activity_home">Home</string>
    <string name="activity">Activity</string>

    <string name="title_activity_activity">Activity</string>

</resources>
