<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="@dimen/login_margin">

    <TextView android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/green_71aa17"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <ImageView android:id="@+id/splitLine"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/login_margin"
        android:background="@color/green_71aa17"/>

    <EditText
        android:id="@+id/userName"
        style="@style/loginEditText"
        android:layout_marginTop="@dimen/login_margin"
        android:hint="@string/hint_account"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        style="@style/loginEditText"
        android:layout_marginTop="5dp"
        android:hint="@string/hint_password"
        android:imeOptions="actionGo"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/cancelButton"
            style="@style/loginButton"
            android:text="@string/cancel"
            android:background="@drawable/login_button"/>

        <Button
            android:id="@+id/loginButton"
            style="@style/loginButton"
            android:text="@string/login"
            android:layout_marginLeft="20dp"
            android:background="@drawable/login_button"/>
    </LinearLayout>
</LinearLayout>