<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:background="@color/black">

    <ImageView android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_launcher"
        android:layout_marginTop="@dimen/introduce_margin"
        android:contentDescription="@string/remove_warning"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/church_introduce"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/introduce_margin"/>

    <android.support.v4.view.ViewPager
        android:layout_height="300dp"
        android:layout_width="fill_parent"
        android:id="@+id/photoPage"
        android:layout_marginTop="@dimen/introduce_margin"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/photoIntroduce"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/introduce_margin"/>
    
    <com.viewpagerindicator.CirclePageIndicator
        android:id="@+id/indicator"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:padding="5dp"/>

    <Button
        android:layout_height="60dp"
        android:layout_width="150dp"
        android:id="@+id/loginButton"
        style="@style/loginButton"
        android:background="@drawable/introduce_button"
        android:text="@string/login"
        android:layout_marginTop="@dimen/introduce_margin"/>

</LinearLayout>